--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 
     implementation('com.slack.api:slack-api-client:1.28.0')
     implementation('com.slack.api:slack-api-model:1.28.0')
+
+    implementation('org.springframework.boot:spring-boot-starter-batch')
 }
 
 tasks.named('test') {
